[project]
name = "vig-octo"
version = "0.1.0"
description = "A MCP server for task management"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.8.0",
    "mypy>=1.15.0",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.40",
    "tomli>=2.0.1",
]
